recursion.lessons.recursion.tree.Tree.scala.error
Tree:12: error: type mismatch;
 found   : Double
 required: Int
var x:Int=getX()
              ^Tree:13: error: type mismatch;
 found   : Double
 required: Int
var y:Int=getY()
              ^