recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
var s= steps
var l=length


current(s)
avance(l)
current(s-1)
droite(angle)
avance(l*shrink)
var x:Int=getX()
var y:Int=getY()
setPos(x,y)
gauche(angle)
gauche(angle)
avance(l*shrink)
//tree(s-1,l,angle,shrink)
}
